# hackathon_2025

./: .gitignore  pyproject.toml
src/: app.py  main.py  rag_chain.py
src/data_extraction/: csv_culture_read.py  pdf_culture_read.py
src/data_extraction/embedding/: embedding.py
src/data_extraction/files/: Bioinsumos-na-cultura-da-soja.txt  Caracterizacao-do-potencial-de-contaminacao-ambiental.txt  Charles-Guia-Boas-Praticas-Cigarinha-do-Milho.txt  Controle-biologico-de-pragas-do-milho.txt  Documentos306.txt  Inseticida-quimico-para-controle-de-Melanaphis-sorghi.txt  PragasDoençasMilho.txt  arroz.txt  circ205.txt  consolidado-milho.txt  doc-ElianaFontes-A5.txt  doc129.txt  doc150.txt  milho-pragas-doencas.txt  milho.txt  soja-pragas-doencas.txt  soja.txt
src/schemas/: input.py
