[project]
name = "hackaton-biofy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chroma-hnswlib",
    "chromadb",
    "docling>=2.28.4",
    "fastapi[standard]>=0.115.12",
    "groq>=0.20.0",
    "langchain>=0.3.21",
    "langchain-chroma>=0.2.2",
    "langchain-community>=0.3.20",
    "langchain-core>=0.3.49",
    "langchain-groq>=0.3.1",
    "langchain-huggingface>=0.1.2",
    "llama-index-embeddings-nvidia>=0.3.3",
    "nvidia-riva-client>=2.19.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pydantic>=2.11.1",
    "pydantic-config>=0.3.0",
    "pymilvus[bulk-writer,model]>=2.5.6",
    "pymupdf>=1.25.4",
    "pypdf>=5.4.0",
    "pypdf2>=3.0.1",
    "sentence-transformers>=4.0.1",
    "unstructured-client>=0.32.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.2",
    "taskipy>=1.14.1",
]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = ['PLR']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
format = 'ruff check . --fix && ruff format .'
serve = 'fastapi dev src/app.py'
